# mixoor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  codebook.toml  package.json  pnpm-lock.yaml  rustfmt.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  publish-js-client.yml  publish-rust-client.yml
clients/js/: README.md  package.json
clients/js/src/utils/: pda.ts
clients/js/test/: _create.test.ts  _deposit.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: lib.rs
program/src/instructions/: deposit.rs  initialize.rs  mod.rs  transfer.rs  update_root.rs  withdraw.rs
program/src/state/: mod.rs
program/src/utils/: constants.rs  error.rs  helpers.rs  verifier.rs
scripts/: generate-clients.mjs
