[package]
name = "smithii-mixoor"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "57Lz1v3ySmcbU8ZxsReW1rFSU9Lvwunv4TrxNP2qBJDa"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
devnet = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
ark-bn254 = { version = "0.5.0", features = [] }
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
groth16-solana = "0.2.0"
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
solana-program = "3.0.0"
solana-bn254 = "3.1.2"
solana-security-txt = "1.1.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
